# servant-next

./: .gitignore  cabal.project  flake.nix  schema.json
backend/: backend.cabal  hie.yaml
backend/lib/: Lib.hs  Main.hs
frontend/: package-lock.json  package.json
