cabal-version: 1.12
name: backend
version: 0.1.0
build-type: Simple

executable server
  hs-source-dirs: lib
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: aeson
               , base
               , bytestring
               , openapi3
               , servant
               , servant-openapi3
               , servant-server
               , text
               , wai
               , warp