cabal-version: 1.12
name: backend
version: 0.1.0
build-type: Simple

library
  hs-source-dirs: lib
  default-language: Haskell2010
  exposed-modules: Lib
  build-depends: aeson
               , base
               , bytestring
               , lens
               , openapi3
               , servant
               , servant-openapi3
               , servant-server
               , text
               , wai

executable server
  hs-source-dirs: bin
  main-is: RunServer.hs
  default-language: Haskell2010
  ghc-options: -main-is RunServer
  build-depends: backend
               , base
               , warp

executable openapi
  hs-source-dirs: bin
  main-is: GenerateOpenAPI.hs
  default-language: Haskell2010
  ghc-options: -main-is GenerateOpenAPI
  build-depends: aeson-pretty
               , backend
               , base
               , bytestring
               , openapi3
               , servant-openapi3
